--- a/Deposito/package.json
+++ b/Deposito/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "angular-ng-autocomplete": "^2.0.5",
+    "angular-select2": "^1.5.3",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.4",
